@@ -6,6 +6,11 @@ phpBMS v0.602/ BMS module v0.602
 - Fixed importing of initial menu display columns, and searchable fields.
 - Fixed saving of times to database incompatibility with some MySQL versions.
 - Fixed creation of new invoices and notes from quickview.
+- Fixed saving/displaying of monthly repeat options on notes.
+- Fixed repeating tasks for marking a parent complete.
+- Added date validation when manually typing dates.
+- Fixed datepicker problems caused by javascript getmonth() function.
+- Fixed datepicker rollover behavior.
 
 phpBMS v0.601/ BMS module v0.601
 ==================================
